fix: add overflow:hidden to work archive container

--- a/src/app/(frontend)/work/styles.module.scss
+++ b/src/app/(frontend)/work/styles.module.scss
@@ -9,6 +9,7 @@
 }
 
 .container {
+  overflow: hidden;
   position: relative;
 }
 
@@ -50,6 +51,8 @@
   display: flex;
   flex-direction: column;
   gap: 1.25rem;
+  position: relative;
+  z-index: 5;
 }
 
 .info {
